--- a/practice/covid19.ipynb
+++ b/practice/covid19.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,7 @@
      "text": [
       "日期列表摘取： ['2020-01-22', '2020-01-23', '2020-01-24', '2020-01-25']\n",
       "日期->索引转换： 12\n",
+      "float64\n",
       "Confirmed : 19887.0\n",
       "Deaths : 426.0\n",
       "Recovered : 604.0\n",
@@ -77,6 +78,8 @@
     "import numpy as np\n",
     "data = np.array(covid[\"data\"])\n",
     "\n",
+    "print(data.dtype)\n",
+    "\n",
     "for header, number in zip(covid[\"header\"], data[date_idx]):\n",
     "    print(header, \":\", number)\n"
    ]
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
